update swag docs
